<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Value Added Services"
                android:textStyle="bold"
                android:textSize="20dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_closeVAS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:clickable="true"
            android:src="@drawable/ic_clear_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="left"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chkManpower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/chkTextExtraManPower"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/extraManpowerKg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chkManpower"
                android:inputType="numberDecimal"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="40dp"
                android:visibility="gone"
                android:hint="@string/hint_extraManPowerKg"/>
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="left"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBox
            android:id="@+id/chkInsurance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkTextInsurance"
            android:padding="5dp"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="left"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBox
            android:id="@+id/chkRisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkTextRisk"
            android:padding="5dp"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="left"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBox
            android:id="@+id/chkPackaging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkTextPackaging"
            android:padding="5dp"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="left"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBox
            android:id="@+id/chkHandling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkTextHandling"
            android:padding="5dp"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="left"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBox
            android:id="@+id/chkHoliday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkTextHolidayDelivery"
            android:padding="5dp"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="left"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBox
            android:id="@+id/chkShipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkTextOddSizeShipment"
            android:padding="5dp"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="left"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBox
            android:id="@+id/chkLabour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkTextLabourCharges"
            android:padding="5dp"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

</LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>