<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@drawable/bg2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/name_reg"
            android:hint="@string/hint_name"/>

    </android.support.design.widget.TextInputLayout>


    <!--<android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/email_reg"
            android:hint="@string/hint_email"/>

    </android.support.design.widget.TextInputLayout>-->

    <TextView
        android:textColor="@color/colorAccent"
        android:textSize="12dp"
        android:layout_marginLeft="5dp"
        android:text="Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/email_reg"
        android:layout_margin="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:background="@drawable/borderbottom"
        android:hint="Click on me for Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_number_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/number_reg"
            android:maxLength="10"
            android:hint="@string/hint_number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password_reg"
            android:hint="@string/hint_password_reg"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password_reg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password_reg2"
            android:hint="@string/hint_password_reg2"/>

    </android.support.design.widget.TextInputLayout>

    <com.andexert.library.RippleView
        android:id="@+id/ripplebtn_Register"
        ripple:rv_centered="true"
        android:layout_below="@+id/book"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:padding="0dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ripple:rv_zoom="true"
        ripple:rv_rippleDuration="200"
        ripple:rv_zoomScale="1.1">
            <Button android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:background="@drawable/btn_rounded"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            />
    </com.andexert.library.RippleView>
</LinearLayout>