<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@drawable/bg2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/login_email"
            android:hint="@string/hint_email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/login_password"
            android:hint="@string/hint_password"/>

    </android.support.design.widget.TextInputLayout>

    <com.andexert.library.RippleView
        android:id="@+id/ripplebtn_login"
        ripple:rv_centered="true"
        android:layout_below="@+id/book"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:padding="0dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ripple:rv_zoom="true"
        ripple:rv_rippleDuration="200"
        ripple:rv_zoomScale="1.1">

        <Button android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:background="@drawable/btn_rounded"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center" />

    </com.andexert.library.RippleView>

    <!--<TextView
        android:id="@+id/idForgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="forgot password ?"
        android:layout_marginTop="20dp"
        android:background="@drawable/borderbottom"
        android:textSize="18dp" />-->
</LinearLayout>