<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/payment_fragment"
    android:layout_marginBottom="10dp"
    tools:context="info.alchemistdigital.e_carrier.activity.SecondBookServiceFragment">

    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content" >-->

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Book Service"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/paymentType"
                    >
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cashPayment"
                        android:text="@string/cash_payment"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cashOnDelivery"
                        android:text="@string/cashOnDelivery_payment"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/netBanking"
                        android:text="@string/netbanking_payment"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/creditDebit"
                        android:text="@string/credit_debit_payment"
                        />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    xmlns:android="http://schemas.android.com/apk/res/android">

                    <Button android:id="@+id/btn_continue_payment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Continue"
                        android:background="@drawable/btn_rounded"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="30dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"
                        />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    <!--</ScrollView>-->
</RelativeLayout>